<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeactivity"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/home_btn_glactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/glprocessor_activity"
        android:layout_marginTop="212dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home_btn_openslactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/opensles_activity"
        android:onClick="onClick"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_glactivity"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home_btn_aaudioactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/aaudio_activity"
        android:onClick="onClick"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_openslactivity"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home_btn_aaudiomakeractivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/aaudio_maker_activity"
        android:onClick="onClick"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_aaudioactivity"
        app:layout_constraintVertical_bias="0.006"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home_btn_oboeactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/oboe_activity"
        android:onClick="onClick"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_aaudiomakeractivity"
        app:layout_constraintVertical_bias="0.006"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>